[metadata]
name = Networking
authors =
    Amogh Reddy
    Matt Buckley
author-email =
    amogh.reddy1@gmail.com
    matt.buckley1755@gmail.com
long_description = file: README.md
url = https://github.com/MattB17/ComputerNetworks
requires-python = >=3.6
classifiers =
    Operating System :: OS Independent
    Programming Language :: Python
